# booksmatch__back

./: .env-exemplo  .gitignore  README.md  db.sqlite3  pyproject.toml  requirements.txt
config/: settings.py  urls.py
livraria/migrations/: 0001_initial.py  0002_livro_capa.py
livraria/models/: __init__.py  categoria.py  editora.py  livro.py
livraria/serializers/: __init__.py  autor.py  categoria.py  editora.py  livro.py
livraria/views/: __init__.py  autor.py  categoria.py  editora.py  livro.py
scripts/: set_my_ip.py
uploader/migrations/: 0001_initial.py
usuario/: admin.py  models.py  views.py
usuario/migrations/: 0001_initial.py  0002_usuario_username.py
